2007-07-11 Added code to store font paths in SVG files. - MGD

2007-07-10 Store subset of TTF font as a Type 3 font in PDF files. - MGD

2007-07-09 Store subset of TTF font as a Type 3 font in PS files. - MGD

2007-07-09 Applied Paul's pick restructure pick and add pickers,
           sourceforge patch 1749829 - JDH


2007-07-09 Applied Allan's draw_lines agg optimization. JDH


2007-07-08 Applied Carl Worth's patch to fix cairo draw_arc - SC

2007-07-07 fixed bug 1712099: xpdf distiller on windows - DSD

2007-06-30 Applied patches to tkagg, gtk, and wx backends to reduce
           memory leakage.  Patches supplied by Mike Droettboom;
           see tracker numbers 1745400, 1745406, 1745408.
           Also made unit/memleak_gui.py more flexible with
           command-line options. - EF

2007-06-30 Split defaultParams into separate file rcdefaults (together with
           validation code). Some heavy refactoring was necessary to do so,
           but the overall behavior should be the same as before. - NN

2007-06-27 Added MPLCONFIGDIR for the default location for mpl data
           and configuration.  useful for some apache installs where
           HOME is not writable.  Tried to clean up the logic in
           _get_config_dir to support non-writable HOME where are
           writable HOME/.matplotlib already exists - JDH

2007-06-27 Fixed locale bug reported at
           http://sourceforge.net/tracker/index.php?func=detail&aid=1744154&group_id=80706&atid=560720
           by adding a cbook.unicode_safe function - JDH

2007-06-27 Applied Micheal's tk savefig bugfix described at
           http://sourceforge.net/tracker/index.php?func=detail&aid=1716732&group_id=80706&atid=560720
           Thanks Michael!


2007-06-27 Patch for get_py2exe_datafiles() to work with new directory
           layout. (Thanks Tocer and also Werner Bruhin.) -ADS


2007-06-27 Added a scroll event to the mpl event handling system and